@@ -5,6 +5,7 @@ UTIL:
 * type=xpath | introduce "actions=set-text:NODETEXT"
 
 BUGFIX:
+* type=gcp actions=download | bugfix to handle command order correctly
 
 GENERAL:
 
